# culibs

./: .gitignore  AUTHORS  COPYING.Unicode  Doxyfile.in  Makefile.am  README  README.rst  autotools.sh  configure.ac  cubase.spec.in  culibs.spec.in  index.html  mkskel
aclocal/: aclocal.am  cu4.m4  cuac_c_stack_direction.m4  cuac_c_thread_keyword.m4  cuac_c_va_list_is_ref.m4  cuac_c_widths.m4  cuac_config_installdirs.m4  cuac_lib_bdwgc.m4  cuac_lib_buddy.m4  cuac_lib_ffi.m4  cuac_lib_rt.m4  cuac_lib_unwind.m4  cuac_modulemagick.m4  cuac_package_version.m4  cuac_useful.m4
attic/aclocal/: bdwgc.m4  dist-rpm.m4
attic/ccf/: ccf_docbook.m4  ccfdocproc.in  rules.am
attic/cu/: clos.h  clos_notes.text
attic/cucon/: bigraph.c  bigraph.h  bigraph_t0.c  graph_t0.c  slist_t1.c  wmap.c  wmap.h  wmap_t0.c
attic/cuex/: aci_b0.c  aci_priv.h  aci_t0.c  cuex_otcomp  dunion.c  foldinert.c  gvar.c  gvar.h  monoid.c  opr.cuex-ot  opr_priv.h  sig.h
attic/cuflow/: timer.c  timer.h  types.def
attic/doc/: cudoxy.css
cu/: algo.h  bistptr.h  bool.c  bool.h  bool_t0.c  box.c  box.h  box_b0.c  box_t0.c  buffer.c  buffer.h  clos.doxy  clos.h  clos_b0.c  clos_t0.c  compat.h  conf.h  conf_fixed.h  cstr.c  cstr.h  cstr_t0.c  cu.am  cu.doxy  data_seq.c  data_seq.h  dbufsink.c  debug.c  debug.h  diag.c  diag.h  dlink.c  dlink.h  dlink_t0.c  dseq_algo.c  dsink.c  dsink.h  dsink_buffer.c  dsink_str.c  dsink_t0.c  dsink_wstring.c  (+78 more)
cu/generic/: clos.h
cu/i386/: clos.h
cucon/: algo_colour.c  algo_colour.h  arr.c  arr.h  array.c  array.h  bitarray.c  bitarray.h  bitarray_b0.c  bitarray_slice.c  bitarray_slice.h  bitarray_slice_t0.c  bitarray_t0.c  bitvect.c  bitvect.h  bitvect_t0.c  compat.h  cucon.am  cucon.doxy  cuset.c  digraph.c  digraph.h  fibheap.c  fibheap.h  fibheap_b0.c  fibheap_t0.c  fibheap_test.h  fibq.c  fibq.h  fibq_b0.c  fibq_t0.c  fibq_test.h  frame.c  frame.h  frame_b0.c  frame_t0.c  fwd.h  graph_algo.c  hmap.c  hmap.h  (+86 more)
cudyn/: algo.c  algo.h  compat.h  ctor.c  ctor.h  cudyn.am  cudyn.c  fwd.h  init.c  misc.c  misc.doxy.sh  misc.h  misc_t0.c  obj_t0.c  print.c  prop.c  prop.h  properties.c  properties.h  proto.c  proto.h  proto_t0.c  type.c  type.h  type_print.c  type_t0.c  typetpl.h
cuex/: aci.c  aci.h  aci_algo.c  acidefs.h  algo.c  algo.h  algo_fv.c  algo_t0.c  assoc.c  assoc.h  assoc_b0.c  assoc_t0.c  atree.c  atree.h  atree_b0.c  atree_t0.c  binding.c  binding.h  binding_t0.c  compat.h  compound.c  compound.h  cuex-otab.y  cuex.am  cuex.doxy  dunion.h  ex.c  ex.h  fpvar.c  fpvar.h  ftype.c  ftype.h  fwd.h  hopcroft.c  hopcroft_t0.c  init.c  intf.h  iteration.c  iteration.h  labelling.c  (+70 more)
cuflow/: cache.c  cache.h  cache_b0.c  cache_t0.c  cacheconf.h  cached.c  cached.h  cached_b0.c  cached_t0.c  cdisj.c  cdisj.h  compat.h  cont.c  cont.h  cont_common.c  cont_common.h  cont_t0.c  cont_t1.c  cuflow.am  cuflow.doxy  errors.c  errors.h  ev.c  ev.h  except.h  fwd.h  gflexq.h  gworkq.c  gworkq.h  gworkq_t0.c  init.c  promise.c  promise.h  promise_t0.c  sched.c  sched.h  sched_b0.c  sched_types.h  stack_t0.c  time.c  (+18 more)
cufo/: attr.c  attr.h  attrdefs.h  compat.h  cufo.am  default-dark.style  default-light.style  fdtarget.c  fwd.h  init.c  init_formats.c  mkattrdefs.pl  mktagdefs.pl  printf.c  sink.h  sink_term.c  sink_xml.c  stream.c  stream.h  stream_open.c  stream_t0.c  stream_t1.c  tag.c  tag.h  tagdefs.h  target_fd.c  target_fd.h  target_sink.c  target_sink.h  target_str.c  target_strip.c  target_text.c  target_wstring.c  target_xmldirect.c  termstyle.c  termstyle.h  textsink.c  textsink.h  textstream.c  textstream.h  (+3 more)
cugra/: algo_SCC.c  algo_SCC.h  algo_SCC_t0.c  bdd_buddy.c  bdd_buddy.h  compat.h  cugra.am  fwd.h  graph.c  graph.h  graph_algo.c  graph_algo.h  graph_io.c  graph_mfvs.c  graph_msc.c  graph_scc.c  graph_scc.h  graph_scc_t0.c  graph_shortpath.c  graph_t0.c  graph_t1.c  init.c
cuoo/: compat.h  compound.h  cuoo.am  fwd.h  halloc.c  halloc.h  halloc_b0.c  halloc_b1.c  halloc_disapp.c  halloc_disclaim.c  halloc_disclaim_old.c  halloc_t0.c  halloc_t1.c  hcobj.h  hcons_b0.c  hcons_disapp.c  hcons_disclaim.c  hcons_rn.c  hcons_rn.h  hcons_weakptr.c  hcons_wp.c  hctem.h  init.c  intf.c  intf.h  layout.c  layout.h  layout_t0.c  meta.h  oalloc.c  oalloc.h  obj_mlc.c  obj_t0.c  prop.c  prop.h  prop_t0.c  properties.c  properties.h  serialisable.h  support.c  (+3 more)
cuos/: compat.h  cuos.am  dirpile.c  dirpile.h  dirpile_t0.c  dsink.h  dsink_fd.c  dsink_iconv.c  file.c  file.h  fs.c  fs.h  fs_t0.c  fs_t1.c  fwd.h  path.c  path.h  path.text  path_t0.c  process.c  process.h  time.c  time.h  user_dirs.c  user_dirs.h  user_dirs_t0.c
custo/: binary_io.c  binary_io.h  binary_io_t0.c  custo.am
cutext/: buffer.c  buffer.h  bufsource.h  chenc_conv.tab  compat.h  conv.c  conv.h  conv_dsink.c  cutext.am  encoding.c  encoding.h  fetch_unicode_data.sh  fwd.h  init.c  lsource.c  lsource.h  lsource_t0.c  lsource_t0.txt  mk_str_enum_conv.c  mk_ucs4ctype_tbl.pl  mk_wccat.c  mk_wccat_table.pl  sink.c  sink.h  sink_buffer.c  sink_fd.c  sink_iconv.c  sink_str.c  source.c  source.h  source_buffer.c  source_fd.c  source_iconv.c  source_memory.c  source_t0.c  src.c  src.h  src_t0.c  src_t1.c  ucs4.c  (+11 more)
doc/: Doxyfile.in  bdwgc-rn.html  cucommon.css.m4  cudoxy.css.m4  cuhtml.css  culibs_footer.html  culibs_header.html  deps.dot  doc.am  environ.doxy  main.doxy  styledefs.m4
edit/: README.rst
migration/: README.mkd  from-0.18-oprdefs.sed  from-0.18.sed  from-0.20.sed  from-0.21.1.sed  from-0.21.2.sed  from-0.22.3.sed  from-0.22.sed  from-0.23.1.sed  from-0.24.sed
pkgconfig/: cubase-uninstalled.pc.in  cubase.pc.in  cuex-uninstalled.pc.in  cuex.pc.in  cuflow-uninstalled.pc.in  cuflow.pc.in  cufo-uninstalled.pc.in  cufo.pc.in  cugra-uninstalled.pc.in  cugra.pc.in  cuos-uninstalled.pc.in  cuos.pc.in  custo-uninstalled.pc.in  custo.pc.in  cutext-uninstalled.pc.in  cutext.pc.in
skel/: template.c  template.h  template.m4  template.x  template.y  template_test.c
tools/: check-export.pl  list-unpacked.pl  local_identifiers.pl  scan_for_macros.pl  show-config-macros.pl  show-culibs-identifiers.pl
(+4 files in other folders)
